--- a/source/about/index.html.erb
+++ b/source/about/index.html.erb
@@ -15,10 +15,10 @@ title: Alisha Ramos | About
 
     <p>In a former life, I worked in brand strategy consulting for Fortune 500 companies at <a href="http://prophet.com">Prophet</a>, a global consulting firm.</p>
 
-    <p>I graduated from Harvard University in 2012, where I earned my degree in Sociology and History. While at Harvard, she ran a digital publication called <i>The Harvard Voice</i>.</p>
+    <p>I graduated from Harvard University in 2012, where I earned my degree in Sociology and History. While at Harvard, I ran a digital publication called <i>The Harvard Voice</i>.</p>
 
-    <p>📝 She writes a weekly newsletter on mixed identity and other personal reflections called Mixed Feelings. <a href="http://tinyletter.com/mixedfeelings" class="p-link">Sign up here!</a></p>
+    <p>📝 I write a weekly newsletter on mixed identity and other personal reflections called Mixed Feelings. <a href="http://tinyletter.com/mixedfeelings" class="p-link">Sign up here!</a></p>
 
-    <p>You can email her at <a href="mailto:ramos.alisha@gmail.com" class="p-link">ramos.alisha@gmail.com</a>.</p>
+    <p>You can email me at <a href="mailto:ramos.alisha@gmail.com" class="p-link">ramos.alisha@gmail.com</a>.</p>
   </div>
 </div>
