--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -5,7 +5,7 @@ title: Alisha Ramos
   I work at the intersection of design, code, storytelling, and 💰.
 </p>
 
-<p class="p-paragraph" style="width: 650px; margin-bottom: 3rem;">Hi! I'm a Design Director at Vox Media and live in Washington, D.C. At Vox, I lead a small team of front-end designers who work with engineers to build products and platforms that help tell our brand partners' stories both on- and off-platform. <a href="/about">Read more about me.</a></p>
+<p class="p-paragraph" style="width: 650px; max-width: 100%; margin-bottom: 3rem;">Hi! I'm a Design Director at Vox Media and live in Washington, D.C. At Vox, I lead a small team of front-end designers who work with engineers to build products and platforms that help tell our brand partners' stories both on- and off-platform. <a href="/about">Read more about me.</a></p>
 
 <div class="center">
   <div class="flex flex-space flex-wrap padded">
