--- a/source/work/2016-05-03-serial-podcast-guide.html.erb
+++ b/source/work/2016-05-03-serial-podcast-guide.html.erb
@@ -10,4 +10,4 @@ org: Vox Media
 
 <p>The end result was an interactive audio piece that incorporated clips from the podcast and copy written to guide the reader around the episode. We produced a guide for every episode of the season.</p>
 
-<p><a href="http://product.voxmedia.com/2015/1/15/7417063/building-the-serial-podcast-guide-product-editorial-collaboration">Read the blog post about our process.</a></p>
+<p>Read the blog post about our process: <a href="http://product.voxmedia.com/2015/1/15/7417063/building-the-serial-podcast-guide-product-editorial-collaboration">Building the Serial podcast guide in five days: an exercise in product and editorial cross-collaboration magic</a>.</p>
