--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -20,10 +20,7 @@ title: Alisha Ramos
   </div>
 </div>
 
-<div class="flex flex-space flex-wrap">
-  <div class="col-1-2">
-    <p class="p-paragraph">📬 I write a weekly newsletter on mixed-race identity and other personal reflections called Mixed Feelings. <a href="http://tinyletter.com/mixedfeelings">Subscribe here</a>!</p>
-  </div>
-  <div class="col-1-2">
-  </div>
+<div class="well flex flex-start flex-center">
+  <div><img class="in-bl" src="/images/mixed-feelings.gif" style="max-height: 100px;"></div>
+  <div class="p-paragraph">📬 Psst! I also write a weekly newsletter on mixed-race identity and other personal reflections called <em>Mixed Feelings</em>. <a href="http://tinyletter.com/mixedfeelings">Subscribe here</a>!</div>
 </div>
