--- a/source/work/2016-05-03-verge-cover.html.erb
+++ b/source/work/2016-05-03-verge-cover.html.erb
@@ -1,8 +1,8 @@
 ---
-title: The Verge cover story treatment
+title: The Verge Cover Story Treatment
 date: May 3, 2016
 blog: work
-thumbnail: https://d13yacurqjgara.cloudfront.net/users/20699/screenshots/2772950/dribbble_verge-1-up.png
+thumbnail: /images/DRIBBBLE_verge-1-up.png
 org: Vox Media
 ---
 
