--- a/source/about/index.html.erb
+++ b/source/about/index.html.erb
@@ -11,7 +11,7 @@ title: Alisha Ramos | About
 
     <p>I've <a href="http://www.niemanlab.org/author/aramos/">written about</a> the cross-section between editorial, product, and design. I believe that the best work happens when <a href="http://www.niemanlab.org/2014/12/reporters-designers-and-developers-become-bffs/">developers, designers, and reporters become friends</a>, share ideas, and tell stories together. I like thinking about what it means for publishers and storytellers to <a href="http://www.niemanlab.org/2015/12/brand-relevance-and-revenue-in-the-age-of-snapchat/">live in a distributed-platform world</a>.</p>
 
-    <p>In 2015, DCFemTech named me <a href="http://tech.co/dcfemtech-recognizes-top-30-women-programmers-2015-04">"one of DC's Most Powerful Women Programmers"</a>.</p>
+    <p>In 2015, DCFemTech named me <a href="http://tech.co/dcfemtech-recognizes-top-30-women-programmers-2015-04">one of DC's Most Powerful Women Programmers</a>.</p>
 
     <p>In a former life, I worked in brand strategy consulting for Fortune 500 companies at <a href="http://prophet.com">Prophet</a>, a global consulting firm.</p>
 
