more work samples

--- a/source/layouts/work_layout.erb
+++ b/source/layouts/work_layout.erb
@@ -7,6 +7,6 @@
   </article>
 
   <div class="m-top center">
-    <a class="p-link" href="/work">Back all work</a> / <a class="p-link" href="/">Back home</a>
+    <a class="p-link" href="/work">Back to all work</a> / <a class="p-link" href="/">Back home</a>
   </div>
 <% end %>
