--- a/source/work/2016-05-04-hymnal-platform.html.erb
+++ b/source/work/2016-05-04-hymnal-platform.html.erb
@@ -10,4 +10,16 @@ org: Vox Media
 
 <p>I work with a small but mighty team on creating the best user experience possible on a platform that's a workhorse for the company's bottom line. I've had the pleasure of conducting several product design sprints with the team, guiding everything from wireframing to sketching to prototyping to testing the platform on users.</p>
 
-<p><i>More coming soon.</i></p>
+<h3>Favoriting</h3>
+
+<img class="mb" src="/images/Hymnal_List-View.gif" /><br />
+
+<h3>Split View Ad Editing</h3>
+
+<img class="mb" src="/images/hymnal-split-view.png" />
+
+<h3>Building a Design Pattern Library</h3>
+
+<p>We created a pattern library in code to help the platform scale as we add more features. I wrote a blog post on this topic as well: <a href="http://product.voxmedia.com/2016/4/20/11458814/how-designers-can-use-unit-testing-to-build-resilient-and-happy-design-systems">How designers can use unit testing to build resilient and happy design systems</a>.</p>
+
+<img class="mb" src="/images/hymnal-patterns.png" />
