more work samples

--- a/source/work/2015-04-25-branded-content.html.erb
+++ b/source/work/2015-04-25-branded-content.html.erb
@@ -6,4 +6,4 @@ thumbnail: https://d13yacurqjgara.cloudfront.net/users/20699/screenshots/1869712
 org: Vox Media
 ---
 
-<p><i>Description and projects coming soon.</i></p>
+<p><i>Descriptions and projects coming soon.</i></p>
