--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -24,7 +24,4 @@ title: Alisha Ramos
   <a class="p-link" href="/work">View all work →</a>
 </div>
 
-<div class="well flex flex-start flex-center">
-  <div><img class="in-bl" src="/images/mixed-feelings.gif" style="max-height: 100px;"></div>
-  <div class="p-paragraph">📬 Psst! I also write a weekly newsletter on mixed-race identity and other personal reflections called <em>Mixed Feelings</em>. <a href="http://tinyletter.com/mixedfeelings">Subscribe here</a>!</div>
-</div>
+<%= partial "/partials/newsletter" %>
