--- a/source/work/2014-12-04-vox-year-in-emoji.html.erb
+++ b/source/work/2014-12-04-vox-year-in-emoji.html.erb
@@ -6,4 +6,4 @@ thumbnail: /images/vox-emoji.jpg
 org: Vox Media
 ---
 
-<p><i>Description and projects coming soon.</i></p>
+<p><a href="http://www.vox.com/a/emoji-year-in-review-2014">Visit the app.</a></p>
