--- a/source/work/2015-01-01-vox-media-year-in-review.html.erb
+++ b/source/work/2015-01-01-vox-media-year-in-review.html.erb
@@ -6,4 +6,4 @@ thumbnail: /images/yir.jpg
 org: Vox Media
 ---
 
-<p><i>Description and projects coming soon.</i></p>
+<p><a href="http://www.voxmedia.com/a/year-in-review-2014">Visit the app.</a></p>
