--- a/source/layouts/work_layout.erb
+++ b/source/layouts/work_layout.erb
@@ -9,4 +9,13 @@
   <div class="m-top center">
     <a class="p-link" href="/work">Back to all work</a> / <a class="p-link" href="/">Back home</a>
   </div>
+
+  <!--<%# if current_article.previous_article %>
+    Previous project: <a href="<%= current_article.previous_article.url %>"><%= current_article.previous_article.title %></a>
+  <%# end %>
+
+  <%# if current_article.next_article %>
+    Next project: <a href="<%= current_article.next_article.url %>"><%= current_article.next_article.title %></a>
+  <%# end %>-->
+
 <% end %>
