--- a/source/layouts/work_layout.erb
+++ b/source/layouts/work_layout.erb
@@ -11,11 +11,11 @@
   </div>
 
   <!--<%# if current_article.previous_article %>
-    Previous project: <a href="<%= current_article.previous_article.url %>"><%= current_article.previous_article.title %></a>
+    Previous project: <a href="<%#= current_article.previous_article.url %>"><%#= current_article.previous_article.title %></a>
   <%# end %>
 
   <%# if current_article.next_article %>
-    Next project: <a href="<%= current_article.next_article.url %>"><%= current_article.next_article.title %></a>
+    Next project: <a href="<%#= current_article.next_article.url %>"><%#= current_article.next_article.title %></a>
   <%# end %>-->
 
 <% end %>
