new font and accent color and JOB 😱

--- a/source/about/index.html.erb
+++ b/source/about/index.html.erb
@@ -7,7 +7,7 @@ title: Alisha Ramos | About
 
   <div class="p-paragraph" style="margin-bottom: 40px;">
 
-    <p>Hi! I'm a Design Director at Vox Media and live in Washington, D.C. At Vox, I lead a small team of front-end designers who work with engineers to build products and platforms that help tell our brand partners' stories both on- and off-platform. Prior to that, I helped build the branded content and partnerships business at Vox (now Vox Creative).</p>
+    <p>Hi, I'm a product designer at <a href="http://navahq.com">Nava PBC</a>. Previously, I was a Design Director at Vox Media. I work, play, and live in Washington, D.C. At Vox, I led a small team of front-end designers who work with engineers to build products and platforms that help tell our brand partners' stories both on- and off-platform. Prior to that, I helped build the branded content and partnerships business at Vox (now Vox Creative).</p>
 
     <p>I've <a href="http://www.niemanlab.org/author/aramos/">written about</a> the cross-section between editorial, product, and design. I believe that the best work happens when <a href="http://www.niemanlab.org/2014/12/reporters-designers-and-developers-become-bffs/">developers, designers, and reporters become friends</a>, share ideas, and tell stories together. I like thinking about what it means for publishers and storytellers to <a href="http://www.niemanlab.org/2015/12/brand-relevance-and-revenue-in-the-age-of-snapchat/">live in a distributed-platform world</a>.</p>
 
@@ -17,8 +17,8 @@ title: Alisha Ramos | About
 
     <p>I graduated from Harvard University in 2012, where I earned my degree in Sociology and History. While at Harvard, I ran a digital publication called <i>The Harvard Voice</i>.</p>
 
-    <p>📝 I write a weekly newsletter on mixed identity and other personal reflections called Mixed Feelings. <a href="http://tinyletter.com/mixedfeelings" class="p-link">Sign up here!</a></p>
+    <p>📝 I write a weekly newsletter on mixed identity and other personal reflections called Mixed Feelings. <a href="http://tinyletter.com/mixedfeelings">Sign up here!</a></p>
 
-    <p>You can email me at <a href="mailto:ramos.alisha@gmail.com" class="p-link">ramos.alisha@gmail.com</a>.</p>
+    <p>You can email me at <a href="mailto:ramos.alisha@gmail.com">ramos.alisha@gmail.com</a>.</p>
   </div>
 </div>
