--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -7,7 +7,7 @@
 
     <script src="https://use.typekit.net/skp6pvq.js"></script>
     <script>try{Typekit.load({ async: true });}catch(e){}</script>
-    <link href='https://fonts.googleapis.com/css?family=Lora:400,700,400italic' rel='stylesheet' type='text/css'>
+    <link href="https://fonts.googleapis.com/css?family=Work+Sans:400,700" rel="stylesheet">
 
     <!-- Use title if it's in the page YAML frontmatter -->
     <title><%= current_page.data.title || "Alisha Ramos" %></title>
