--- a/source/stylesheets/_work.scss
+++ b/source/stylesheets/_work.scss
@@ -1,7 +1,7 @@
 .work {
 
   h1, h2, h3, h4 {
-    @include effra-bold;
+    @include work-sans;
   }
 
   p {
@@ -53,7 +53,7 @@
     margin-bottom: 0.5rem;
   }
   &__piece-title {
-    @include filson;
+    @include work-sans;
     &:hover {
       text-decoration: none;
       color: darken($color-accent, 40%);
