--- a/source/layouts/_nav.html.erb
+++ b/source/layouts/_nav.html.erb
@@ -1,8 +1,8 @@
 <header class="c-nav">
   <div class="wrapper c-nav__wrapper">
-    <h1 class="c-nav__title"><a href="/">Alisha Ramos</a></h1>
+    <!--<h1 class="c-nav__title"><a href="/">Alisha Ramos</a></h1>-->
     <nav class="c-nav__menu-wrapper">
-      <ul class="c-nav__menu">
+      <!--<ul class="c-nav__menu">
         <li class="c-nav__menu-item">
           <a href="/about">About</a>
         </li>
@@ -15,7 +15,7 @@
         <li class="c-nav__menu-item">
           <a href="/writing">Writing</a>
         </li>
-      </ul>
+      </ul>-->
     </nav>
   </div>
 </header>
