--- a/source/layouts/_footer.html.erb
+++ b/source/layouts/_footer.html.erb
@@ -2,9 +2,8 @@
   <div class="wrapper">
     <div>👀</div>
     <div style="margin-top: 20px;">
-      <a class="p-icon--group" href="http://github.com/alishalisha"><svg class="p-icon p-icon--group"><use xlink:href="#icon-github"/></svg></a>
       <a class="p-icon--group" href="http://twitter.com/alishalisha"><svg class="p-icon"><use xlink:href="#icon-twitter"/></svg></a>
-      <a class="p-icon--group" href="mailto:alisha.ramos@voxmedia.com"><svg class="p-icon p-icon--group"><use xlink:href="#email"/></svg></a>
+      <a class="p-icon--group" href="mailto:ramos.alisha@gmail.com"><svg class="p-icon p-icon--group"><use xlink:href="#email"/></svg></a>
     </div>
   </div>
 </footer>
