--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -1,6 +1,23 @@
 ---
 title: Alisha Ramos
 ---
-<p class="p-heading--h1">
-  Alisha Ramos is Founder and Chief Lounger at <a href="http://girlsnightin.co">Girls' Night In</a>.
-</p>
+<div class="flex flex-space">
+  <div style="flex-basis: 90%;">
+    <h1 class="p-heading--h1" style="font-weight: normal;">
+    Alisha Ramos is Founder and Chief Lounger at <a href="http://girlsnightin.co">Girls' Night In</a>.
+    </h1>
+      <div style="margin: 20px 0 100px 0;">
+        <a class="p-icon--group" href="http://twitter.com/alishalisha"><svg class="p-icon"><use xlink:href="#icon-twitter"/></svg></a>
+        <a class="p-icon--group" href="mailto:ramos.alisha@gmail.com"><svg class="p-icon p-icon--group"><use xlink:href="#email"/></svg></a>
+      </div>
+      <div style="width: 550px; max-width: 100%; line-height: 1.4;">
+        <strong>THE LONG VERSION:</strong>
+        <p>Alisha Ramos is a technology industry leader and expert, having had 5+ years’ experience working and managing across product, editorial, revenue, and brand strategy at top global companies. Prior to founding Girls’ Night In, Alisha served as a Product Design Director at Vox Media, one of the fastest growing media companies in the world with a 150+MM unique monthly reach featuring premium brands such as Vox.com, The Verge, Eater, Curbed, SBNation, Racked, and Polygon. While at Vox, she helped build revenue products and platforms that can scale. She has also worked as a design lead at Nava, a public benefit corporation working to improve the user experience of HealthCare.gov and other government services. In a previous life, she was a brand strategy consultant for Fortune 500 companies at Prophet, a global firm.</p>
+
+        <p>Alisha has spoken at several events, conferences, and panels, such as CSSConf, AIGA DC Design Week, and Ladies Get Paid. She has been recognized twice as one of <i>DC’s Most Powerful Woman Programmers</i> by DCFemTech, and has been attributed a thought leader in media and technology by Nieman Journalism Lab.</p>
+
+        <p>Alisha earned her Bachelor's degree from Harvard University, where she studied Sociology and History.</p>
+    </div>
+  </div>
+  <div><img src="/images/headshot.jpg" style="width: 500px; max-width: 100%;"></div>
+</div>
